Select, Insert, Update, Delete Basic

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,10 +4,13 @@ version: 1.0.0
 repository: https://github.com/fugindo/daravel
 
 environment:
-  sdk: ^3.0.6
+  sdk: ^3.0.5
 
 dependencies:
+  mysql1: ^0.20.0
   path: ^1.8.3
+  sqflite: ^2.2.8+4
+  sqlite3: ^2.0.0
 
 dev_dependencies:
   lints: ^2.1.1
